--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <li class="list-inline-item"><a href="https://www.instagram.com/investplusrealty" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         <li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a></li>
                         <li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li class="list-inline-item"><a href="#" target="_blank"><i class="fas fa-rss"></i></a></li>
+                        <li class="list-inline-item"><a href="mailto:team@investplusflorida.com?subject=Mail from Our Site"><i class="fas fa-at"></i></a></li>
                     </ul>
                 </div>
                 
@@ -413,7 +413,7 @@
                             <li class="list-inline-item"><a href="https://www.instagram.com/investplusrealty" target="_blank"><i class="fab fa-instagram"></i></a></li>
                             <li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a></li>
                             <li class="list-inline-item"><a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                            <li class="list-inline-item"><a href="#" target="_blank"><i class="fas fa-rss"></i></a></li>
+                            <li class="list-inline-item"><a href="mailto:team@investplusflorida.com?subject=Mail from Our Site"><i class="fas fa-at"></i></a></li>
                         </ul>
                     </div>
                     
