--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         <h3>Say hello:</h3>
                         <ul class="list-unstyled">
                             <li><p><strong><i class="fa fa-map-marker"></i> Address:</strong> Location, Street, Code</p></li>
-                            <li><p><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="#">team@investplusflorida.com</a></p></li>
+                            <li><p><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="mailto:team@investplusflorida.com?subject=Mail from Our Site">team@investplusflorida.com</a></p></li>
                             <li><p><strong><i class="fa fa-phone"></i> Phone:</strong> +1 (407) 300-2746</p></li>
                         </ul>
                     </div>
