--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 
                 <div class="col-md-8 header-right d-none d-md-block">
                     
+                    <h6>LOOKING TO BUY OR SELL A HOME IN FLORIDA? OUR EXPERT TEAM CAN HELP!</h6>
                     <p>Invest Plus Realty is a full-service, boutique-style real estate company specialized in both domestic and foreign national clients looking to invest in residential or commercial real estate in the sunshine State.</p>
                     <p>Our Services Includes:</p>
                     <ul class="list-services">
