--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link rel="shortcut icon" href="assets/css/images/small-logo.ico">
+        <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
         
     <!-- Required meta tags -->
     <meta charset="utf-8">
