--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <P>Venha conhecer o The Grove Resort and Spa, o apart-hotel mais cobiçado de Orlando na Flórida e aprenda sobre esta oportunidade única de ter um imóvel proximo a Disney e ainda obter renda com o aluguel de temporada. Quem disse que seu sonho não pode ser um bom negócio?
                         </P>
                     <p>Inscreva-se Já!</p>
-                    <button type="button" class="buttonWorkshop"><a href="https://www.eventbrite.com/e/investplus-florida-lancamento-the-grove-resort-and-spa-tickets-48004982194" target="_blank">Fortaleza</button></a>
+                    <button type="button" class="buttonWorkshop"><a href="https://www.eventbrite.com/e/investplus-florida-lancamento-the-grove-resort-and-spa-tickets-48004982194" target="_blank">FORTALEZA</button></a>
                     
-                    <button type="button" class="buttonWorkshop"><a href="https://www.eventbrite.com/e/investplus-florida-lancamento-the-grove-resort-and-spa-tickets-48004982194" target="_blank">Sorocaba</button></a>
+                    <button type="button" class="buttonWorkshop"><a href="https://www.eventbrite.com/e/investplus-florida-lancamento-the-grove-resort-and-spa-tickets-48261700044" target="_blank">SOROCABA</button></a>
                     <br>
                     <br>
                     <p>Mais Informações abaixo</p>
